# Ground_segmentation

./: CMakeLists.txt  package.xml
launch/: ground_seg.launch
src/: ground_seg_core.cpp  ground_seg_node.cpp
